# PhysicalBasicsComputerGames

./: CMakeLists.txt  README.md
task1/: CMakeLists.txt  main.cpp  task.txt
task10/: CMakeLists.txt  main.cpp  plot.sh  task.txt
task11/: CMakeLists.txt  main.cpp  task.txt
task12/: CMakeLists.txt  main.cpp  task.txt
task13/: CMakeLists.txt  main.cpp  task.txt
task14/: CMakeLists.txt  main.cpp  task.txt
task15/: CMakeLists.txt  main.cpp  task.txt
task2/: CMakeLists.txt  main.cpp  plot.sh  task.txt
task3/: CMakeLists.txt  main.cpp  plot.sh  task.txt
task4/: CMakeLists.txt  main.cpp  plot.sh  task.txt
task5/: CMakeLists.txt  main.cpp  plot.sh  task.txt
task6/: CMakeLists.txt  main.cpp  task.txt
task7/: CMakeLists.txt  main.cpp  plot.sh  task.txt
task8/: CMakeLists.txt  main.cpp  task.txt
task9/: CMakeLists.txt  main.cpp  task.txt
