cmake_minimum_required(VERSION 3.30)
project(GamePhysics)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)

add_subdirectory(task1)
add_subdirectory(task2)
add_subdirectory(task3)
add_subdirectory(task4)
add_subdirectory(task5)
add_subdirectory(task6)
add_subdirectory(task7)
add_subdirectory(task8)
add_subdirectory(task9)
add_subdirectory(task10)
add_subdirectory(task11)
add_subdirectory(task12)
add_subdirectory(task13)
add_subdirectory(task14)
add_subdirectory(task15)